--- a/Stitch VIP/control
+++ b/Stitch VIP/control
@@ -1,5 +1,5 @@
 Package: vn.tuandb.stitchvip
-Name: Stitch VIP
+Name: Stitch (VIP)
 Version: 1.0
 Section: HackApps
 Icon: file:///Library/tuandb.IconRepo/HackApps.png
