--- a/BodyFilter Pro/control
+++ b/BodyFilter Pro/control
@@ -1,9 +1,13 @@
 Package: vn.tuandb.bodyfilterpro
-Name: BodyFilter Pro
-Author: tuandb <contact@tuandb.name.vn>
-Description: Enable Pro Version
-Depends: mobilesubstrate
-Maintainer: tuandb <contact@tuandb.name.vn>
-Architecture: iphoneos-arm
-Section: HackApps
+Name: BodyFilter (Pro)
 Version: 1.0
+Section: HackApps
+Icon: file:///Library/tuandb.IconRepo/HackApps.png
+Description: Enable Pro Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.bodyfilterpro
+Homepage: https://repo.tuandb.name.vn
+Architecture: iphoneos-arm
+Author: tuandb <contact@tuandb.name.vn>
+Maintainer: tuandb <contact@tuandb.name.vn>
+Support: tuandb <contact@tuandb.name.vn>
+Depends: mobilesubstrate
