--- a/Facetune VIP/control
+++ b/Facetune VIP/control
@@ -1,10 +1,13 @@
 Package: vn.tuandb.facetunevip
-Name: Facetune VIP
+Name: Facetune (VIP)
+Version: 1.0
 Section: HackApps
+Icon: file:///Library/tuandb.IconRepo/HackApps.png
 Description: Enable VIP Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.facetunevip
 Homepage: https://repo.tuandb.name.vn
 Architecture: iphoneos-arm
 Author: tuandb <contact@tuandb.name.vn>
 Maintainer: tuandb <contact@tuandb.name.vn>
+Support: tuandb <contact@tuandb.name.vn>
 Depends: mobilesubstrate
-Version: 1.0
