--- a/PerfectVideo Pro/control
+++ b/PerfectVideo Pro/control
@@ -1,10 +1,13 @@
 Package: vn.tuandb.perfectvideolitepro
-Name: PerfectVideo Pro
-Author: tuandb <contact@tuandb.name.vn>
-Description: Enable Pro Version
-Homepage: https://repo.tuandb.name.vn
-Depends: mobilesubstrate
-Maintainer: tuandb <contact@tuandb.name.vn>
-Architecture: iphoneos-arm
-Section: HackApps
+Name: PerfectVideo (Pro)
 Version: 1.0
+Section: HackApps
+Icon: file:///Library/tuandb.IconRepo/HackApps.png
+Description: Enable Pro Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.perfectvideolitepro
+Homepage: https://repo.tuandb.name.vn
+Architecture: iphoneos-arm
+Author: tuandb <contact@tuandb.name.vn>
+Maintainer: tuandb <contact@tuandb.name.vn>
+Support: tuandb <contact@tuandb.name.vn>
+Depends: mobilesubstrate
