--- a/ProVideo Plus/control
+++ b/ProVideo Plus/control
@@ -1,9 +1,13 @@
 Package: vn.tuandb.provideoplus
-Name: ProVideo Plus
-Author: tuandb <contact@tuandb.name.vn>
-Description: Enable Plus Version
-Depends: mobilesubstrate
-Maintainer: tuandb <contact@tuandb.name.vn>
-Architecture: iphoneos-arm
-Section: HackApps
+Name: ProVideo (Plus)
 Version: 1.0
+Section: HackApps
+Icon: file:///Library/tuandb.IconRepo/HackApps.png
+Description: Enable Plus Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.provideoplus
+Homepage: https://repo.tuandb.name.vn
+Architecture: iphoneos-arm
+Author: tuandb <contact@tuandb.name.vn>
+Maintainer: tuandb <contact@tuandb.name.vn>
+Support: tuandb <contact@tuandb.name.vn>
+Depends: mobilesubstrate
