--- a/QR Reader (Pro)/control
+++ b/QR Reader (Pro)/control
@@ -1,10 +1,10 @@
-Package: vn.tuandb.unzippro
-Name: Unzip (Pro)
+Package: vn.tuandb.qrreaderpro
+Name: QR Reader (Pro)
 Version: 1.0
 Section: HackApps
 Icon: file:///Library/tuandb.IconRepo/HackApps.png
 Description: Enable Pro Version
-Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.unzippro
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.qrreaderpro
 Homepage: https://repo.tuandb.name.vn
 Architecture: iphoneos-arm
 Author: tuandb <contact@tuandb.name.vn>
