--- a/Scan Master (Premium)/control
+++ b/Scan Master (Premium)/control
@@ -1,10 +1,10 @@
-Package: vn.tuandb.unzippro
-Name: Unzip (Pro)
+Package: vn.tuandb.scanmasterpremium
+Name: Scan Master (Premium)
 Version: 1.0
 Section: HackApps
 Icon: file:///Library/tuandb.IconRepo/HackApps.png
-Description: Enable Pro Version
-Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.unzippro
+Description: Enable Premium Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.scanmasterpremium
 Homepage: https://repo.tuandb.name.vn
 Architecture: iphoneos-arm
 Author: tuandb <contact@tuandb.name.vn>
