--- a/Smule VIP/control
+++ b/Smule VIP/control
@@ -1,9 +1,13 @@
 Package: vn.tuandb.smulevip
-Name: Smule VIP
-Author: tuandb <contact@tuandb.name.vn>
-Description: Enable VIP Version
-Depends: mobilesubstrate
-Maintainer: tuandb <contact@tuandb.name.vn>
-Architecture: iphoneos-arm
-Section: HackApps
+Name: Smule (VIP)
 Version: 1.0
+Section: HackApps
+Icon: file:///Library/tuandb.IconRepo/HackApps.png
+Description: Enable VIP Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.smulevip
+Homepage: https://repo.tuandb.name.vn
+Architecture: iphoneos-arm
+Author: tuandb <contact@tuandb.name.vn>
+Maintainer: tuandb <contact@tuandb.name.vn>
+Support: tuandb <contact@tuandb.name.vn>
+Depends: mobilesubstrate
