--- a/Time Cut VIP/control
+++ b/Time Cut VIP/control
@@ -1,10 +1,13 @@
 Package: vn.tuandb.timecutvip
-Name: TimeCut VIP
-Author: tuandb <contact@tuandb.name.vn>
-Description: Enable VIP Version
-Homepage: https://repo.tuandb.name.vn
-Depends: mobilesubstrate
-Maintainer: tuandb <contact@tuandb.name.vn>
-Architecture: iphoneos-arm
-Section: HackApps
+Name: TimeCut (VIP)
 Version: 1.0
+Section: HackApps
+Icon: file:///Library/tuandb.IconRepo/HackApps.png
+Description: Enable VIP Version
+Depiction: https://repo.tuandb.name.vn/info.html?id=vn.tuandb.timecutvip
+Homepage: https://repo.tuandb.name.vn
+Architecture: iphoneos-arm
+Author: tuandb <contact@tuandb.name.vn>
+Maintainer: tuandb <contact@tuandb.name.vn>
+Support: tuandb <contact@tuandb.name.vn>
+Depends: mobilesubstrate
