--- a/Vmake (Pro)/Makefile
+++ b/Vmake (Pro)/Makefile
@@ -3,7 +3,7 @@ FINALPACKAGE=1
 include $(THEOS)/makefiles/common.mk
 
 export ARCHS = armv7 armv7s arm64 arm64e
-TWEAK_NAME = BeautyPlusVideoPro
-BeautyPlusVideoPro_FILES = Tweak.xm
+TWEAK_NAME = VmakePro
+VmakePro_FILES = Tweak.xm
 
 include $(THEOS_MAKE_PATH)/tweak.mk
