--- a/UnRAR (Pro)/control
+++ b/UnRAR (Pro)/control
@@ -1,6 +1,6 @@
 Package: vn.tuandb.unarchiverpro
-Name: Unarchiver (Pro)
-Version: 1.0
+Name: UnRAR (Pro)
+Version: 1.1
 Section: HackApps
 Icon: file:///Library/tuandb.IconRepo/HackApps.png
 Description: Enable Pro Version
